# lichess_puzzles

./: .gitignore  README.md  index.html  lichess_db_puzzle_top_10000.csv.zst  package.json
.github/workflows/: windows-build.yml
src/: App.module.css  App.tsx  feature_flags.ts  i18n.ts  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: chess.ts  constants.ts  types.ts
src/app/components/: AppHeader.tsx  LibraryScreen.tsx  SessionSidebar.tsx  SolveScreen.tsx  StepNav.tsx
src/en/: strings.json
src/is/: strings.json
