[package]
name = "lichess_puzzles"
version = "0.1.0"
description = "Desktop Lichess puzzle trainer"
authors = ["hjorturjonasson"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lichess_puzzles_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }
csv = "1.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
zstd = "0.13"

[dependencies]
csv = "1.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
zstd = "0.13"
